// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div
  className="kogito-tooling--loading-screen"
  onTransitionEnd={[Function]}
  style={
    Object {
      "opacity": 0,
      "transition": "opacity 400ms",
    }
  }
>
  <div
    className="pf-c-page"
  >
    <main
      className="pf-c-page__main"
      role="main"
      tabIndex={-1}
    >
      <div
        className="pf-l-bullseye"
      >
        <div
          className="pf-c-empty-state pf-m-lg"
        >
          <div
            className="pf-u-mb-lg"
          >
            <div
              aria-valuetext="Loading..."
              className="pf-c-spinner"
              role="progressbar"
            >
              <div
                className="pf-c-spinner__clipper"
              />
              <div
                className="pf-c-spinner__lead-ball"
              />
              <div
                className="pf-c-spinner__tail-ball"
              />
            </div>
          </div>
          <h5
            className="pf-c-title pf-m-lg"
          >
            Loading...
          </h5>
          <div
            className="pf-c-empty-state__body"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `<Fragment />`;

exports[`LoadingScreen when visible 1`] = `
<div
  className="kogito-tooling--loading-screen"
  onTransitionEnd={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <div
    className="pf-c-page"
  >
    <main
      className="pf-c-page__main"
      role="main"
      tabIndex={-1}
    >
      <div
        className="pf-l-bullseye"
      >
        <div
          className="pf-c-empty-state pf-m-lg"
        >
          <div
            className="pf-u-mb-lg"
          >
            <div
              aria-valuetext="Loading..."
              className="pf-c-spinner"
              role="progressbar"
            >
              <div
                className="pf-c-spinner__clipper"
              />
              <div
                className="pf-c-spinner__lead-ball"
              />
              <div
                className="pf-c-spinner__tail-ball"
              />
            </div>
          </div>
          <h5
            className="pf-c-title pf-m-lg"
          >
            Loading...
          </h5>
          <div
            className="pf-c-empty-state__body"
          />
        </div>
      </div>
    </main>
  </div>
</div>
`;
